test/valid/sample09.ml
#
print arg0 * arg1
