test/invalid/sample09.ml
#
print arg1 * arg2
